--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/WPW_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/warsztat_pieknych_wlosow/" />
     <title>Warsztat pięknych włosów</title>
+    <script>
+      const p = sessionStorage.getItem("redirectPath");
+      if (p) {
+        sessionStorage.removeItem("redirectPath");
+        history.replaceState(null, "", p);
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
